# Project_CongNgheMoiTrongPhatTrienUngDung_rpm_sepsis

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: mcp.example.json  settings.json
.claude/agents/: data-explorer.md  medical-reviewer.md  ml-researcher.md  vietnamese-report-writer.md
.claude/commands/: check-quality.md  deploy-local.md  eda.md  review-medical.md  standup.md  train.md  write-report.md
.claude/skills/new-component/: SKILL.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/new-feature-function/: SKILL.md
.claude/skills/new-ml-experiment/: SKILL.md
.claude/skills/new-uml/: SKILL.md
.claude/skills/report-section/: SKILL.md
.github/workflows/: cd.yml  ci.yml  drift.yml  integration.yml
app/backend/: Dockerfile  auth.py  config.py  database.py  db_models.py  decision.py  main.py  model.py  requirements.txt  schemas.py  ws_manager.py
app/frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css
app/frontend/src/api/: client.ts
app/frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx  RoleGate.tsx
app/frontend/src/components/ui/: Badge.tsx
app/frontend/src/hooks/: useAlertStream.ts
app/frontend/src/routes/: AdminSettings.tsx  AlertsFeed.tsx  Login.tsx  PatientDetail.tsx  PatientList.tsx
app/frontend/src/stores/: authStore.ts  patientsStore.ts
app/frontend/src/types/: api.ts
data-pipeline/: config.py  requirements.txt
data-pipeline/consumer/: feature_engineer.py  handler.py  validator.py
data-pipeline/feature_store/: schemas.py
data-pipeline/simulator/: run.py
docs/: mcp-setup.md  walkthrough-output.md
docs/report/: 1-gioi-thieu.md  2-phan-tich-thiet-ke.md  2.10-thiet-ke-test.md  2.9-thiet-ke-giai-thuat.md  3-hien-thuc.md
docs/uml/: 01-functional-overview.puml  02-usecase.puml  03-activity-sepsis-detection.puml  04-sequence-sepsis-detection.puml  05-class-domain.puml  06-database-schema.puml  07-erd.puml  08-ui-wireframe.md  README.md
infra/localstack/: init-aws.sh
infra/postgres/: init.sql
ml/: requirements.txt
ml/kaggle/: README.md  train_catboost_kaggle.py
ml/src/: build_features.py  ensemble.py  evaluate.py  preprocess.py  relabel.py  train_lgbm.py  utility_score.py
mlops/drift/: check.py
mlops/mlflow/: Dockerfile
mlops/monitoring/: prometheus.yml
mlops/monitoring/grafana/provisioning/dashboards/: dashboard.yml  sepsis.json
mlops/monitoring/grafana/provisioning/datasources/: datasource.yml
reports/load/: baseline_stats.csv
scripts/: dev-down.ps1  dev-up.ps1
tests/: conftest.py
tests/integration/: conftest.py  test_auth_flow.py  test_predict_flow.py
tests/load/: locustfile.py
tests/unit/: test_auth.py  test_decision.py  test_feature_engineer.py  test_utility_score.py  test_validator.py
